// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base config works correctly [server] 1`] = `
"
const port = 1234

export default port
"
`;

exports[`config with process.env works correctly [server] 1`] = `
"
const port = \\"$process.env.PORT/c46469501b5f86bc90b1fee9055515a1b4332936503fcbbb357c2b34f9d75701\\"

export default port
"
`;
